tests/compiler/case_exhaustiveness_array_1.kk.out
error: Non-exhaustive cases
 --> tests/compiler/case_exhaustiveness_array_1.kk:2:3
  |
1 |   let foo =
2 |     \[] => true
  |  ___^
3 | |   \[x, ...[]] => false
  | |_______________________^
  |

Missing case(s):

  \[_, ...[_, ..._]] => ...
