tests/compiler/case_exhaustiveness_array_1.kk
let foo = 
  \[] => true
  \[x, ...[]] => false

